// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba en GifGrid debe de mostrar items cuando se carga imagenes con useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__headShake"
  >
    mi categoria
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="DFG"
      key="DFG"
      title="cualka"
      url="https://localhost/cualka/cuak.jpg"
    />
  </div>
</Fragment>
`;

exports[`Prueba en GifGrid debe mostrarse correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__headShake"
  >
    mi categoria
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
